# disco-elysium-editor

./: .gitignore  README.md
.github/workflows/: dotnet-build.yml  tauri-build.yml
DiscoSaveEditor/: DiscoSaveEditor.sln
DiscoSaveEditor/DiscoSaveEditor/: App.xaml  App.xaml.bak  App.xaml.cs  Directory.Build.targets  DiscoSaveEditor.csproj  InverseBoolConverter.cs  MainWindow.xaml  MainWindow.xaml.bak  MainWindow.xaml.cs  MainWindow.xaml.cs.bak  app.manifest
DiscoSaveEditor/Views_Bak_Remote/: CharacterPage.xaml  InventoryPage.xaml  InventoryPage.xaml.cs  JournalPage.xaml  (+7 more)
disco-save-editor-tauri/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
disco-save-editor-tauri/src-tauri/: Cargo.toml  tauri.conf.json
disco-save-editor-tauri/src-tauri/capabilities/: default.json
disco-save-editor-tauri/src-tauri/game_data/: actors_npcs_major.json  actors_npcs_minor.json  actors_player.json  actors_skills.json  save_file_schema.json  variables_all.json  variables_inventory.json
disco-save-editor-tauri/src-tauri/src/: commands.rs  game_data.rs  lib.rs  lua_database.rs  models.rs  save_service.rs  states_lua.rs
docs/: ASSET_EXTRACTION_RESEARCH.md  README.md  SAVE_EDITOR_GUIDE.md  SCHEMA_REFERENCE.md  WINUI_IMPLEMENTATION_GUIDE.md
example/: MARTINAISE, DAY 1, 15-24(2_6_2026 4-25-35 PM).ntwtf.zip.backup
game_assets/: _manifest.json  items_inventory.json  variables_auto.json  variables_locations.json  variables_reputation.json  variables_xp.json
scraper/: extract_assets.py  extract_dialogue.py  extract_game_data.py  go.mod  main.go
(+84 files in other folders)
