[package]
name = "disco-save-editor"
version = "1.0.0"
description = "Disco Elysium Save Editor"
authors = ["ig4e"]
license = "MIT"
repository = "https://github.com/ig4e/disco-elysium-editor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
byteorder = "1.5"
regex = "1.10"
dirs = "5.0"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
zip = "4.2.0"
